--- a/Python_Project_For_Data_Science (1).ipynb
+++ b/Python_Project_For_Data_Science (1).ipynb
@@ -1286,7 +1286,7 @@
       "cell_type": "markdown",
       "source": [
         "Author:\n",
-        "# Muhammad Suleman Niamat"
+        "# Muhammad Ahmad"
       ],
       "metadata": {
         "id": "KLQitCrxhQfD"
